fix provigil image spacing bug

--- a/src/styles/partials/case-studies/case-study-detail-points.styl
+++ b/src/styles/partials/case-studies/case-study-detail-points.styl
@@ -59,8 +59,9 @@
         max-width 330px
 
   .image-wrapper
-    width 60%
+    width 62%
     display none
 
     @media (min-width 1275px)
       display inline-block
+      text-align right
