--- a/src/styles/partials/case-studies/provigil.styl
+++ b/src/styles/partials/case-studies/provigil.styl
@@ -24,16 +24,11 @@
       background-size 110%
 
   .case-study-problem-solution
-    height 1200px
-
-    @media (min-width: 600px)
-      height: 900px
-
-    // @media (min-width: 992px)
-    //   height 900px
+    height auto
+    padding-bottom 300px
 
     @media (min-width: 1275px)
-      height 850px
+      padding-bottom 400px
 
 
   .case-study-second-point
@@ -81,50 +76,20 @@
   text-align center
 
   img
-    display inline-block
     max-width 100%
+    margin 0 auto
 
-    &.desktop
-      margin-right 18px
+  .provigil-desktop-tablet-phone-large
+    display none
 
-      @media (min-width 800px)
-        position relative
-        max-width 50%
+    @media (min-width 800px)
+      display block
 
-    &.tablet
-      max-width 40%
-      position absolute
-      bottom 0
-      right 0
+  .provigil-desktop-tablet-phone-small
+    display block
 
-      @media (min-width: 800px)
-        position: relative
-        bottom: auto
-        right: auto
-        max-width 20%
-        margin-right 10px
-
-      @media (min-width: 1275px)
-        max-width 100%
-        margin-bottom 75px
-
-
-    &.phone
-      max-width 20%
-      position absolute
-      bottom 0
-      right 25%
-
-      @media (min-width: 800px)
-        position: relative
-        bottom: auto
-        right: auto
-        max-width 10%
-        margin-right 0
-
-      @media (min-width: 1275px)
-        max-width 100%
-        margin-bottom 65px
+    @media (min-width 800px)
+      display none
 
 
 
